// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has correct defaults 1`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;

exports[`reset 1`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;

exports[`reset 2`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;

exports[`reset 3`] = `
Immutable.Record {
  "isSubmitting": true,
}
`;

exports[`reset 4`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;

exports[`setSubmitting 1`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;

exports[`setSubmitting 2`] = `
Immutable.Record {
  "isSubmitting": true,
}
`;

exports[`setSubmitting 3`] = `
Immutable.Record {
  "isSubmitting": false,
}
`;
